# blvm-spec-lock

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC_AS_SOURCE_OF_TRUTH.md  SPEC_LOCK_COVERAGE.md  SPEC_WORDING.md
.cargo/: config.toml
.github/workflows/: ci.yml  fuzz-build-weekly.yml
crates/blvm-spec-lock-core/: Cargo.toml
crates/blvm-spec-lock-core/src/: lib.rs
crates/blvm-spec-lock-core/src/parser/: lexer.rs  mod.rs  orange_paper.rs
crates/blvm-spec-lock-core/src/translator/: mod.rs  static_checker.rs  z3_verifier.rs
docs/: ANNOTATION_GUIDE.md  COVERAGE_JSON.md  LOCKING_MECHANISM.md  TRANSLATOR_PATTERNS.md  VERIFY_JSON.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lexer_parse.rs
schemas/: coverage_inventory_v1.json  coverage_spec_rollup_v1.json  formula_verify_report_v1.json  verify_report_v1.json
scripts/: publish-crates-io.sh
src/: cache.rs  lib.rs  macro_impl.rs
src/parser/: condition.rs  contracts.rs  lexer.rs  mod.rs  orange_paper.rs
src/report/: mod.rs
src/translator/: static_checker.rs  z3_translator.rs  z3_verifier.rs
tests/: extract_cmds_integration.rs  extract_formulas_snap.rs  extract_property_tests_snap.rs  golden_spec.rs  list_formulas_cycles_integration.rs  negative_verification.rs  verify_formulas_integration.rs
tests/fixtures/: extract_bindings.toml  extract_formulas_smoke.md  formula_dep_cycle.md  formula_verify_bad_static.md  formula_verify_smoke.md  formula_verify_unsat_z3.md
tests/fixtures/negative_crate/: Cargo.toml
tests/fixtures/negative_crate/src/: lib.rs
tests/fixtures/no_section_attribute/: Cargo.toml
tests/fixtures/no_section_attribute/src/: lib.rs
tests/golden/: constants_fragment.md  minimal_function.md  standalone_property.md
tests/snapshots/: extract_formulas_snap__extract_formulas_smoke_generated.snap  extract_property_tests_snap__extract_property_tests_smoke_generated.snap  golden_spec__golden_constants_fragment.snap  golden_spec__golden_minimal_function.snap  golden_spec__golden_standalone_property.snap
