[package]
name = "blvm-spec-lock-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
regex = "1.10"

[[bin]]
name = "lexer_parse"
path = "fuzz_targets/lexer_parse.rs"
test = false
doc = false
bench = false
