[package]
name = "blvm-spec-lock-core"
version = "0.1.13"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Parser and translator shared by blvm-spec-lock (proc-macro and cargo-spec-lock CLI)"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-spec-lock"
homepage = "https://btcdecoded.org"
rust-version = "1.83"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
regex = "1.10"
z3 = { version = "0.12", optional = true }

[features]
default = ["z3"]
z3 = ["dep:z3"]

[lints.rust]
unexpected_cfgs = { level = "warn" }
